crates/aether-data-derive/tests/ui/rejects_nine_inputs.stderr
error: transforms accept at most 8 inputs (ADR-0048 §1); found 9
  --> tests/ui/rejects_nine_inputs.rs:15:5
   |
15 |     a: Scalar,
   |     ^
